# j-pretrain

./: .gitignore  CLAUDE.md  REPRO_PROMPT.md  git_log.txt  iter1_review.tgz  loop.sh  pyproject.toml  ralph_pretty.py
.claude/: ralph-loop.local.md
artifacts/: checkpoint_inventory.jsonl
configs/data/: datasets.json
configs/data/tokenizer/: tokenizer_config.json
configs/model/: smollm2-135m.json
configs/stage1/: music.json
configs/stage2/: music.json
configs/stage3/: chempile.json
docs/: COMPUTE_PLAN.md  DATA_AUDIT.md  ENVIRONMENT.md  FAILURES.md  FAILURE_PLAYBOOK.md  HANDOFF.md  PAPER_SPEC.md  REFERENCES.md  REFERENCES_code.md  REFERENCES_paper.md  STORAGE_PLAN.md
reports/: FEASIBILITY.md  PRETRAIN_READINESS_AUDIT.md  SPEC_AUDIT.md  completion_verification.json
reports/per_run_audits/: music-300m_lambda-0.0__stage1.json  music-300m_lambda-0.0__stage2.json  music-300m_lambda-0.0__stage3.json
runs/: manifest.jsonl
scripts/: analyze_results.py  bench_storage.py  bench_throughput.py  build_datasets.py  build_probes.py  setup_env.sh  verify_completion.py
src/j_pretrain/analysis/: figure.py  results.py
src/j_pretrain/artifacts/: checkpoint.py  (+1 more)
state/: DECISIONS.md  NEXT_ACTION.md  SCOPE_LOCK.json  experiment_state.json  iteration_ledger.jsonl  process_registry.json  resource_state.json  run_queue.json
tests/: test_analysis.py  test_artifacts.py  test_config.py  test_data.py  test_model.py  test_orchestration.py  test_orchestrator_run.py  test_probes_build.py  test_stage_driver.py  test_training.py  test_verify_completion.py
wandb/: settings
(+21 files in other folders)
